--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Corrientes de memoria</title>
-  <link rel="icon" href="Assets/IMG/Logos/normal.png">
+  <link rel="icon" href="./Assets/IMG/Logos/normal.png">
 
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -29,8 +29,8 @@
   <!-- Contenedor del video en popup -->
   <div id="video-popup" class="video-popup">
     <div class="popup-content">
-      <video id="video-banner" autoplay muted>
-        <source src="./Assets/Videos/IntroVideo.mp4" type="video/mp4">
+      <video id="video-banner" autoplay preload="auto" muted>
+        <source src="./Assets/Videos/IntroVideo.webm" type="video/webm">
         Tu navegador no soporta el formato de video.
       </video>
     </div>
@@ -40,7 +40,7 @@
   <header>
     <nav id="menu" class="menu">
       <div class="menu-left">
-        <img src="Assets/IMG/Logos/LogoNav.png" alt="Logo" class="logo">
+        <img src="./Assets/IMG/Logos/LogoNav.png" alt="Logo" class="logo">
       </div>
 
       <!-- Botón hamburguesa -->
@@ -128,7 +128,7 @@
   <!-- Banner -->
   <div class="banner" id="banner">
     <video autoplay muted loop class="banner-video">
-      <source src="./Assets/Videos/VideoBanner.mp4" type="video/mp4">
+      <source src="./Assets/Videos/VideoBanner.webm" type="video/webm">
       Tu navegador no soporta el video.
     </video>
     <div class="banner-content">
@@ -354,7 +354,7 @@
     </div>
 
     <video class="testimonios-image" id="relatosVideo" autoplay loop muted>
-      <source id="videoSourceTestimonios" src="" type="video/mp4">
+      <source id="videoSourceTestimonios" src="" type="video/webm">
       Tu navegador no soporta la etiqueta de video.
     </video>
   </div>
