--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <!-- Contenedor del video en popup -->
   <div id="video-popup" class="video-popup">
     <div class="popup-content">
-      <video id="video-banner" autoplay preload="auto" muted>
-        <source src="./Assets/Videos/IntroVideo.webm" type="video/webm">
+      <video id="video-banner" autoplay preload="metadata" muted>
+        <source src="./Assets/Videos/IntroVideo_2.mp4" type="video/webm">
         Tu navegador no soporta el formato de video.
       </video>
     </div>
