--- a/index.html
+++ b/index.html
@@ -370,36 +370,35 @@
   </div>
 
   <div class="Productos">
-    <div class="card" style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
-      <div class="text-container">
-        <h6 class="title">VR ARC “TECIM REYES HOLGUÍN” </h6>
-        <p class="experienciasdescription">Vive una inmersión total en la Patrullera de Apoyo Fluvial “TECIM Eddic Cristian Reyes Holguín” de la Armada de Colombia con esta experiencia de realidad virtual.         </p>
-      </div>
+    <div class="card" data-apk="vr.apk" style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
+        <div class="text-container">
+            <h6 class="title">VR ARC “TECIM REYES HOLGUÍN” </h6>
+            <p class="experienciasdescription">Vive una inmersión total en la Patrullera de Apoyo Fluvial “TECIM Eddic Cristian Reyes Holguín” de la Armada de Colombia con esta experiencia de realidad virtual.</p>
+        </div>
     </div>
-    <div class="card" style="background-image: url('Assets/IMG/experiencias/juego1.webp');">
-      <div class="text-container">
-        <h6 class="title">RESCATA EL AMAZONAS</h6>
-        <p class="experienciasdescription">Navega por misiones estratégicas para proteger el territorio marítimo y fluvial del país, a través de un videojuego que ofrece una experiencia virtual basada en las operaciones de esfuerzo armado y no armado de la Armada de Colombia.        </p>
-      </div>
+    <div class="card" data-apk="juego.apk" style="background-image: url('Assets/IMG/experiencias/juego1.webp');">
+        <div class="text-container">
+            <h6 class="title">RESCATA EL AMAZONAS</h6>
+            <p class="experienciasdescription">Navega por misiones estratégicas para proteger el territorio marítimo y fluvial del país, a través de un videojuego que ofrece una experiencia virtual basada en las operaciones de esfuerzo armado y no armado de la Armada de Colombia.</p>
+        </div>
     </div>
-    <div class="card" style="background-image: url('Assets/IMG/experiencias/ar2.webp');">
-      <div class="text-container">
-        <h6 class="title">AR BONGO HOSPITAL</h6>
-        <p class="experienciasdescription">Sumérgete en una experiencia interactiva que te llevará a bordo del bongo hospital de la Armada de Colombia.
-        </p>
-      </div>
+    <div class="card" data-apk="ar.apk" style="background-image: url('Assets/IMG/experiencias/ar2.webp');">
+        <div class="text-container">
+            <h6 class="title">AR BONGO HOSPITAL</h6>
+            <p class="experienciasdescription">Sumérgete en una experiencia interactiva que te llevará a bordo del bongo hospital de la Armada de Colombia.</p>
+        </div>
     </div>
-    <div class="card" style="background-image: url('Assets/IMG/experiencias/documental.webp');">
-      <div class="text-container">
-        <h6 class="title">DOCUMENTAL</h6>
-        <p class="experienciasdescription">Se estructuraron 12 documentales de contexto y memoria histórica de la Amazonía colombiana, en donde se relatan y se dan a conocer hechos históricos, bonanzas y costumbres de las comunidades indígenas</p>
-      </div>
+    <div class="card" data-apk="docu.apk" style="background-image: url('Assets/IMG/experiencias/documental.webp');">
+        <div class="text-container">
+            <h6 class="title">DOCUMENTAL</h6>
+            <p class="experienciasdescription">Se estructuraron 12 documentales de contexto y memoria histórica de la Amazonía colombiana, en donde se relatan y se dan a conocer hechos históricos, bonanzas y costumbres de las comunidades indígenas.</p>
+        </div>
     </div>
-    <div class="card" style="background-image: url('Assets/IMG/experiencias/libro.webp');">
-      <div class="text-container">
-        <h6 class="title">LIBRO</h6>
-        <p class="experienciasdescription">Conoce este importante trabajo de investigación que evoca historias y experiencias de las comunidades locales de la Amazonía, así cómo, el contexto de memoria e información estratégica que se fundamenta en el rol fundamental que desempeña la Armada de Colombia en esta región del país.</p>
-      </div>
+    <div class="card" data-apk="libro.apk" style="background-image: url('Assets/IMG/experiencias/libro.webp');">
+        <div class="text-container">
+            <h6 class="title">LIBRO</h6>
+            <p class="experienciasdescription">Conoce este importante trabajo de investigación que evoca historias y experiencias de las comunidades locales de la Amazonía, así cómo, el contexto de memoria e información estratégica que se fundamenta en el rol fundamental que desempeña la Armada de Colombia en esta región del país.</p>
+    </div>
        
     </div>
       
@@ -752,6 +751,7 @@
   <script src="./JS/histoyPopUP.js"></script>
   <script src="./JS/Relatos.js"></script>
   <script src="./JS/carrusel.js"></script>
+  <script src="./JS/productos.js"></script>
 
 </body>
 
