--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
     </div>
 
     <br>
-    <p class="footer-text">© 2025 Ingeniería Multimedia. Todos los derechos reservados.</p>
+    <p class="footer-text">© 2025 Corrientes De Memoria. Todos los derechos reservados.</p>
   </footer>
 
 
