Descripción de los cambios realizados

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
           <li><a href="#banner">INICIO</a></li>
           <li><a href="#exp">EXPERIENCIAS</a></li>
           <li><a href="#contexto">ACERCA</a></li>
-          <li><a href="#contexto">NUESTRO EQUIPO</a></li>
         </ul>
       </div>
 
@@ -115,7 +114,7 @@
   <!-- Banner -->
   <div class="banner" id="banner">
     <video autoplay muted loop class="banner-video">
-      <source src="./Assets/Videos/VideoBanner.webm" type="video/mp4">
+      <source src="./Assets/Videos/Banner/Banner.webm" type="video/mp4">
       Tu navegador no soporta el video.
     </video>
     <div class="banner-content">
@@ -269,7 +268,7 @@
       <span id="historyclosePopup" class="Aboutclose">&times;</span>
       <img src="Assets/IMG/Hitoria/historias/casa arana-min_4_11zon.webp" alt="Imagen del contexto" class="popupimg"
         id="asd" />
-      <p style="font-size: 0.8rem;">Derechos</p>
+      <p id="HistoryDerechos" style="font-size: 0.8rem;">Derechos</p>
       <div class="AboutPopUPConte">
         <h3 class="center-text" id="TituloPopAmazonas">Contexto</h3>
         <p id="TextPopAmazonas">El proyecto de contexto “Corrientes de memoria: narrativa transmedia del Amazonas”, es
