--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
         <div class="idiomas">
           <ul>
-            <li><a href="#"><img src="Assets/SVG/usa.png" alt="English" width="24" height="24"></a></li>
-            <li><a href="#"><img src="Assets/SVG/colombia.png" alt="Español" width="24" height="24"></a></li>
+            <li><a href="#" id="isEng"><img src="Assets/SVG/usa.png" alt="English" width="24" height="24" id="isEng-img"></a></li>
+            <li><a href="#" id="isEsp"><img src="Assets/SVG/colombia.png" alt="Español" width="24" height="24" id="isEsp-img"></a></li>
           </ul>
         </div>
       </div>
@@ -92,7 +92,7 @@
         <div class="close-mobile-menubtn" id="close-mobile-menubtn">X</div>
         <div class="menu-list-mobile">
           <ul>
-            <li><a href="#menu">INICIO</a></li>
+            <li><a href="#banner">INICIO</a></li>
             <li><a href="#exp">EXPERIENCIAS</a></li>
             <li><a href="#contexto">ACERCA</a></li>
           </ul>
@@ -782,7 +782,7 @@
     AOS.init();
   </script>
 
-
+  <script src="./JS/idioma.js"></script>
   <script src="./JS/Viedo-PopUp.js"></script>
   <script src="./JS/Menutoggle.js"></script>
   <script src="./JS/paralax.js"></script>
