--- a/index.html
+++ b/index.html
@@ -355,10 +355,18 @@
       </div>
     </div>
 
+
+    <picture class="testimonios-image" data-aos="fade-left" id="relatosVideo">
+      <source id="RelatosimageDesktop" srcset="./Assets/IMG/testimonios/PC/Arnold_comunidad_apapois.png" media="(min-width: 1024px)" type="image/png">
+      <source id="RelatosimageMobile" srcset="./Assets/IMG/testimonios/Movil/Arnold_comunidad_apapois.JPG" media="(max-width: 1023px)" type="image/png">
+      <img id="RelatosdefaultImage" src="./Assets/IMG/testimonios/PC/Arnold_comunidad_apapois.png" alt="Imagen de Arnold comunidad apapois">
+    </picture>
+<!--
     <video class="testimonios-image" data-aos="fade-left" id="relatosVideo" autoplay loop muted>
       <source id="videoSourceTestimonios" src="./Assets/Videos/Relatos/Arnold comunidad apapois.webm" type="video/mp4">
       Tu navegador no soporta la etiqueta de video.
     </video>
+  -->
   </div>
 
 
@@ -700,7 +708,7 @@
   <!-- Footer -->
   <footer>
     <br>
-    <ul class="footer-social">
+    <ul class="footer-social">  
       <li><a href="#"><img src="Assets/SVG/youtube.svg" alt="Instagram" width="20" height="30"></a></li>
       <li><a href="#"><img src="Assets/SVG/tiktok.svg" alt="TikTok" width="20" height="30"></a></li>
       <li><a href="#"><img src="Assets/SVG/yt.svg" alt="YouTube" width="20" height="30"></a></li>
@@ -746,19 +754,6 @@
         </ul>
       </div>
 
-
-      <!--
-    <div>
-      <ul>
-        <li><strong>Redes Armada Nacional</strong></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Tik Tok</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">X</a></li>
-        <li><a href="#">Linkedin</a></li>
-     
-      </ul>
-    </div>-->
     </div>
     <hr class="footer-line">
     <div class="footer-logos">
