--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <!-- histoy -->
   <div id="histoy-nav" class="histoy-nav">
     <div class="histoy-caqueta">
-      <div class="content-text" data-aos="zoom-in" data-aos-duration="000">
+      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="Titulocaqueta">Título del artículo</h4>
         <p id="Textcaqueta">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
@@ -222,7 +222,7 @@
       </div>
     </div>
     <div class="histoy-putumayo">
-      <div class="content-text">
+      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="TituloPutumayo">Título del artículo</h4>
         <p id="TextPutumayo">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
@@ -234,7 +234,7 @@
       </div>
     </div>
     <div class="histoy-Guaviare">
-      <div class="content-text">
+      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="TituloGuaviare">Título del artículo</h4>
         <p id="TextGuaviare">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
@@ -248,7 +248,7 @@
       </figure>
     </div>
     <div class="histoy-baupez">
-      <div class="content-text">
+      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="TituloBaupez">Título del artículo</h4>
         <p id="TextBaupez">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
@@ -260,7 +260,7 @@
       </div>
     </div>
     <div class="histoy-AMAZONAS">
-      <div class="content-text">
+      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="TituloAmazonas">Título del artículo</h4>
         <p id="TextAmazonas">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
@@ -276,7 +276,7 @@
   <!-- Popup history-->
   <div id="historypopup" class="Aboutpopup">
     <div class="Aboutpopup-content">
-      <span id="historyclosePopup" class="Aboutclose">&times;</span>
+      <div id="historyclosePopup" class="Aboutclose">&times;</div>
       <img src="Assets/IMG/Hitoria/historias/casa arana-min_4_11zon.webp" alt="Imagen del contexto" class="popupimg"
         id="asd" />
       <p id="HistoryDerechos" style="font-size: 0.8rem;">Derechos</p>
@@ -367,7 +367,7 @@
       <!-- Pop-Up -->
       <div id="RelatosVideoPopUp" class="RelatosVideoPopUp">
         <div class="Relatospopup-content">
-            <span class="Relatosclose-btn" id="Relatosclose-btn">&times;</span>
+            <div class="Relatosclose-btn" id="Relatosclose-btn">&times;</div>
             <video class="Relatos-Popup-video" id="Relatos-Popup-video" controls>
                 <source id="RelatosPopUpVideo" src="Assets/Videos/Relatos/Arnold comunidad apapois.webm" type="video/webm">
                 Tu navegador no soporta el formato de video.
