--- a/index.html
+++ b/index.html
@@ -210,64 +210,63 @@
   <!-- histoy -->
   <div id="histoy-nav" class="histoy-nav">
     <div class="histoy-caqueta">
-      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
+      <div class="content-text-histoy" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="Titulocaqueta">Título del artículo</h4>
         <p id="Textcaqueta">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
         <button id="HisCaqBtnCaqueta">Leer más</button>
       </div>
-      <div class="content-image">
+      <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/PUTUMAYO-min.webp" alt="Imagen de ejemplo">
       </div>
     </div>
     <div class="histoy-putumayo">
-      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
+      <div class="content-text-histoy" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="TituloPutumayo">Título del artículo</h4>
         <p id="TextPutumayo">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
         <button id="HisCaqBtnPutumayo">Leer más</button>
       </div>
-      <div class="content-image">
+      <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/AMAZONAS1-min.webp" alt="Imagen de ejemplo">
       </div>
     </div>
     <div class="histoy-Guaviare">
-      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
+      <div class="content-text-histoy" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="TituloGuaviare">Título del artículo</h4>
         <p id="TextGuaviare">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
         <button id="HisCaqBtnGuaviare">Leer más</button>
       </div>
-
-      <figure class="content-image">
+      <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/GUAVIARE-min.webp" alt="Imagen de ejemplo">
         <!--- <figcaption>Derechos de autor: Alcaldía Municipal San José del Guaviare</figcaption>-->
-      </figure>
+      </div>
     </div>
     <div class="histoy-baupez">
-      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
+      <div class="content-text-histoy" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="TituloBaupez">Título del artículo</h4>
         <p id="TextBaupez">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
         <button id="HisCaqBtnBaupez">Leer más</button>
       </div>
-      <div class="content-image">
+      <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/CAQUETÁ-min.webp" alt="Imagen de ejemplo">
       </div>
     </div>
     <div class="histoy-AMAZONAS">
-      <div class="content-text" data-aos="zoom-in" data-aos-duration="1000">
+      <div class="content-text-histoy" data-aos="zoom-in" data-aos-duration="1000">
         <h4 id="TituloAmazonas">Título del artículo</h4>
         <p id="TextAmazonas">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
         <button id="HisCaqBtnAmazonas">Leer más</button>
       </div>
-      <div class="content-image">
+      <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/VAÚPES-min.webp" alt="Imagen de ejemplo">
       </div>
     </div>
