--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
     <!-- Incluye AOS JS -->
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-</head>
+  </head>
 
 
 </head>
@@ -72,7 +72,8 @@
       <div class="menu-right">
         <div class="redes">
           <ul>
-            <li><a href="#"><img src="./Assets/SVG/icons8-instagram.svg" alt="Instagram" width="24" height="24"></a></li>
+            <li><a href="#"><img src="./Assets/SVG/icons8-instagram.svg" alt="Instagram" width="24" height="24"></a>
+            </li>
             <li><a href="#"><img src="./Assets/SVG/icons8-tiktok.svg" alt="TikTok" width="24" height="24"></a></li>
             <li><a href="#"><img src="./Assets/SVG/icons8-youtube.svg" alt="YouTube" width="24" height="24"></a></li>
           </ul>
@@ -80,8 +81,10 @@
 
         <div class="idiomas">
           <ul>
-            <li><a href="#" id="isEng"><img src="./Assets/SVG/usa.png" alt="English" width="24" height="24" id="isEng-img"></a></li>
-            <li><a href="#" id="isEsp"><img src="./Assets/SVG/colombia.png" alt="Español" width="24" height="24" id="isEsp-img"></a></li>
+            <li><a href="#" id="isEng"><img src="./Assets/SVG/usa.png" alt="English" width="24" height="24"
+                  id="isEng-img"></a></li>
+            <li><a href="#" id="isEsp"><img src="./Assets/SVG/colombia.png" alt="Español" width="24" height="24"
+                  id="isEsp-img"></a></li>
           </ul>
         </div>
       </div>
@@ -110,8 +113,10 @@
 
           <div class="idiomas">
             <ul>
-              <li><a href="#" id="isEng-movil"><img src="./Assets/SVG/usa.png" alt="English" width="24" height="24" id="isEng-img-movil"></a></li>
-              <li><a href="#" id="isEsp-movil"><img src="./Assets/SVG/colombia.png" alt="Español" width="24" height="24" id="isEsp-img-movil"></a>
+              <li><a href="#" id="isEng-movil"><img src="./Assets/SVG/usa.png" alt="English" width="24" height="24"
+                    id="isEng-img-movil"></a></li>
+              <li><a href="#" id="isEsp-movil"><img src="./Assets/SVG/colombia.png" alt="Español" width="24" height="24"
+                    id="isEsp-img-movil"></a>
               </li>
             </ul>
           </div>
@@ -138,7 +143,7 @@
       <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua.</p>-->
       <div class="buttons">
-        <button class="btn-primary" onclick="location.href='#exp'"  >Experiencias</button>
+        <button class="btn-primary" onclick="location.href='#exp'">Experiencias</button>
         <button class="btn-transparent" onclick="location.href='#teaser'"><i class="fa fa-play"></i> Trailers</button>
       </div>
 
@@ -165,25 +170,25 @@
 
   <!-- About -->
   <!-- Sección de contexto -->
-    <section class="Aboutcontextosection" id="contexto">
-      <h2>CONTEXTO</h2>
-      <div class="Aboutcontent">
-        <!-- Sección izquierda -->
-        <div class="Aboutleft-section" data-aos="fade-right" data-aos-duration="1000">
-          <h3>CORRIENTES DE MEMORIA</h3>
-          <p>El proyecto de contexto “Corrientes de memoria: narrativa transmedia del Amazonas”, es un trabajo
-            investigativo con alto rigor académico realizado entre la Armada de Colombia y la Universidad San
-            Buenaventura, el cual tiene como propósito dar a conocer la labor de los Marinos de Colombia que se encuentran
-            desplegados en las áreas de responsabilidad de la Fuerza Naval de la Amazonía.</p>
-          <button id="AboutleerMasBtn">Leer más</button>
-        </div>
-
-        <!-- Sección derecha -->
-        <div class="Aboutright-section"  data-aos="fade-left" data-aos-duration="1000">
-          <img src="./Assets/IMG/About/BulletsAbout-min.webp" alt="Imagen del contexto" />
-        </div>
+  <section class="Aboutcontextosection" id="contexto">
+    <h2>CONTEXTO</h2>
+    <div class="Aboutcontent">
+      <!-- Sección izquierda -->
+      <div class="Aboutleft-section" data-aos="fade-right" data-aos-duration="1000">
+        <h3>CORRIENTES DE MEMORIA</h3>
+        <p>El proyecto de contexto “Corrientes de memoria: narrativa transmedia del Amazonas”, es un trabajo
+          investigativo con alto rigor académico realizado entre la Armada de Colombia y la Universidad San
+          Buenaventura, el cual tiene como propósito dar a conocer la labor de los Marinos de Colombia que se encuentran
+          desplegados en las áreas de responsabilidad de la Fuerza Naval de la Amazonía.</p>
+        <button class="btn-secondary" id="AboutleerMasBtn">Leer más</button>
       </div>
-    </section>
+
+      <!-- Sección derecha -->
+      <div class="Aboutright-section" data-aos="fade-left" data-aos-duration="1000">
+        <img src="./Assets/IMG/About/BulletsAbout-min.webp" alt="Imagen del contexto" />
+      </div>
+    </div>
+  </section>
 
   <!-- Popup -->
   <div id="Aboutpopup" class="Aboutpopup">
@@ -215,7 +220,7 @@
         <p id="Textcaqueta">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
-        <button id="HisCaqBtnCaqueta">Leer más</button>
+        <button class="btn-secondary" id="HisCaqBtnCaqueta">Leer más</button>
       </div>
       <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/PUTUMAYO-min.webp" alt="Imagen de ejemplo">
@@ -227,7 +232,7 @@
         <p id="TextPutumayo">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
-        <button id="HisCaqBtnPutumayo">Leer más</button>
+        <button class="btn-secondary" id="HisCaqBtnPutumayo">Leer más</button>
       </div>
       <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/AMAZONAS1-min.webp" alt="Imagen de ejemplo">
@@ -239,7 +244,7 @@
         <p id="TextGuaviare">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
-        <button id="HisCaqBtnGuaviare">Leer más</button>
+        <button class="btn-secondary" id="HisCaqBtnGuaviare">Leer más</button>
       </div>
       <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/GUAVIARE-min.webp" alt="Imagen de ejemplo">
@@ -252,7 +257,7 @@
         <p id="TextBaupez">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
-        <button id="HisCaqBtnBaupez">Leer más</button>
+        <button class="btn-secondary" id="HisCaqBtnBaupez">Leer más</button>
       </div>
       <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/CAQUETÁ-min.webp" alt="Imagen de ejemplo">
@@ -264,7 +269,7 @@
         <p id="TextAmazonas">Este es el párrafo de ejemplo que describe el contenido. Aquí puedes poner cualquier texto
           relevante para el
           tema del artículo o sección.</p>
-        <button id="HisCaqBtnAmazonas">Leer más</button>
+        <button class="btn-secondary" id="HisCaqBtnAmazonas">Leer más</button>
       </div>
       <div class="content-image-histoy">
         <img src="./Assets/IMG/About/depa/VAÚPES-min.webp" alt="Imagen de ejemplo">
@@ -276,7 +281,7 @@
   <div id="historypopup" class="Aboutpopup">
     <div class="Aboutpopup-content">
       <div id="historyclosePopup" class="Aboutclose">&times;</div>
-      <img src="./Assets/IMG/Hitoria/historias/casa arana-min_4_11zon.webp" alt="Imagen del contexto" class="popupimg"
+      <img src="./Assets/IMG/Hitoria/historias/IMG/his-1.webp" alt="Imagen del contexto" class="popupimg"
         id="asd" />
       <p id="HistoryDerechos" style="font-size: 0.8rem;">Derechos</p>
       <div class="AboutPopUPConte">
@@ -307,12 +312,12 @@
     </h2>
   </div>
 
-  <div class="video-container" >
+  <div class="video-container">
     <div class="video-wrapper" data-aos="fade-up">
       <iframe class="video" id="video"
         src="https://www.youtube.com/embed/yQatxvaW8j0?rel=0&autoplay=0&controls=0&showinfo=0" frameborder="0"
         allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      <img src="./Assets/IMG/Teaser-mask-cafe-min.webp" class="video-mask" alt="Video Mask">
+      <img src="./Assets/IMG/Teaser-mask-cafe.webp" class="video-mask" alt="Video Mask">
     </div>
   </div>
 
@@ -327,7 +332,7 @@
 
   <div class="main-container">
     <div class="content-container" data-aos="fade-right">
-      <div class="left-section" >
+      <div class="left-section">
         <div class="circle-container">
           <div class="circle" id="circle-1" style="background: #304D3D;" onclick="mostrarAlerta(1)"></div>
         </div>
@@ -344,35 +349,38 @@
 
       <div class="right-section">
         <h3 class="name" id="relatosNombre">
-          Arnold
+          Arnol Tanimuka
         </h3>
         <h4 class="rank" id="relatosRango">
-          Comunidad Apapois
+          Referencia personal
         </h4>
         <p class="Testimoniosdescription" id="relatosText">
-          Pues la armada nacional es la empresa más importante que tiene este municipio, la armada nacional es la que le genera soberanía nacional...
+          Mi nombre es Arnold Tanimuka, Makuna mi apellido y yo vengo de Apaporis; De una comunidad llamada Bellavista, de ahí vengo, vengo a estudiar... 
         </p>
       </div>
     </div>
 
 
-    <picture class="testimonios-image" data-aos="fade-left" id="relatosVideo">
-      <source id="RelatosimageDesktop" srcset="./Assets/IMG/testimonios/PC/Arnold_comunidad_apapois.png" media="(min-width: 1024px)" type="image/png">
-      <source id="RelatosimageMobile" srcset="./Assets/IMG/testimonios/Movil/Arnold_comunidad_apapois.jpg" media="(max-width: 1023px)" type="image/png">
-      <img id="RelatosdefaultImage" src="./Assets/IMG/testimonios/PC/Arnold_comunidad_apapois.png" alt="Imagen de Arnold comunidad apapois">
+    <picture class="testimonios-image" id="relatosVideo" data-aos="fade-left">
+      <source id="RelatosimageDesktop" srcset="./Assets/IMG/testimonios/PC/Arnold_comunidad_apapois.png"
+        media="(min-width: 1024px)" type="image/png">
+      <source id="RelatosimageMobile" srcset="./Assets/IMG/testimonios/Movil/Arnold_comunidad_apapois.jpg"
+        media="(max-width: 1023px)" type="image/png">
+      <img id="RelatosdefaultImage" src="./Assets/IMG/testimonios/PC/Arnold_comunidad_apapois.png"
+        alt="Imagen de Arnold comunidad apapois">
     </picture>
   </div>
 
-      <!-- Pop-Up -->
-      <div id="RelatosVideoPopUp" class="RelatosVideoPopUp">
-        <div class="Relatospopup-content">
-            <div class="Relatosclose-btn" id="Relatosclose-btn">&times;</div>
-            <video class="Relatos-Popup-video" id="Relatos-Popup-video" controls>
-                <source id="RelatosPopUpVideo" src="./Assets/Videos/Relatos/Arnold comunidad apapois.webm" type="video/webm">
-                Tu navegador no soporta el formato de video.
-            </video>
-        </div>
+  <!-- Pop-Up -->
+  <div id="RelatosVideoPopUp" class="RelatosVideoPopUp">
+    <div class="Relatospopup-content">
+      <div class="Relatosclose-btn" id="Relatosclose-btn">&times;</div>
+      <video class="Relatos-Popup-video" id="Relatos-Popup-video" controls>
+        <source id="RelatosPopUpVideo" src="./Assets/Videos/Relatos/Arnold comunidad apapois.webm" type="video/webm">
+        Tu navegador no soporta el formato de video.
+      </video>
     </div>
+  </div>
 
 
   <!-- Experiencias -->
@@ -384,7 +392,7 @@
     </h2>
   </div>
 
-  <div class="Productos"  data-aos="fade-up">
+  <div class="Productos" data-aos="fade-up">
     <div class="card" data-apk="vr.apk" style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
       <div class="text-container">
         <h6 class="title">VR ARC “TECIM REYES HOLGUÍN” </h6>
@@ -713,7 +721,7 @@
   <!-- Footer -->
   <footer>
     <br>
-    <ul class="footer-social">  
+    <ul class="footer-social">
       <li><a href="#"><img src="./Assets/SVG/youtube.svg" alt="Instagram" width="20" height="30"></a></li>
       <li><a href="#"><img src="./Assets/SVG/tiktok.svg" alt="TikTok" width="20" height="30"></a></li>
       <li><a href="#"><img src="./Assets/SVG/yt.svg" alt="YouTube" width="20" height="30"></a></li>
