--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <div id="historyclosePopup" class="Aboutclose">&times;</div>
       <img src="./Assets/IMG/Hitoria/historias/IMG/his-1.webp" alt="Imagen del contexto" class="popupimg"
         id="asd" />
-      <p id="HistoryDerechos" style="font-size: 0.8rem;">Derechos</p>
+      <p id="HistoryDerechos">Derechos</p>
       <div class="AboutPopUPConte">
         <h3 class="center-text" id="TituloPopAmazonas">Contexto</h3>
         <p id="TextPopAmazonas">El proyecto de contexto “Corrientes de memoria: narrativa transmedia del Amazonas”, es
@@ -395,7 +395,7 @@
   <div class="Productos" data-aos="fade-up">
     <div class="card" data-apk="vr.apk" style="background-image: url('Assets/IMG/experiencias/vr2.webp');">
       <div class="text-container">
-        <h6 class="title">VR ARC “TECIM REYES HOLGUÍN” </h6>
+        <h6 class="title">REALIDAD VIRTUAL ARC “TECIM REYES HOLGUÍN” </h6>
         <p class="experienciasdescription">Vive una inmersión total en la Patrullera de Apoyo Fluvial “TECIM Eddic
           Cristian Reyes Holguín” de la Armada de Colombia con esta experiencia de realidad virtual.</p>
       </div>
@@ -410,9 +410,9 @@
     </div>
     <div class="card" data-apk="ar.apk" style="background-image: url('Assets/IMG/experiencias/ar2.webp');">
       <div class="text-container">
-        <h6 class="title">AR BONGO HOSPITAL</h6>
-        <p class="experienciasdescription">Sumérgete en una experiencia interactiva que te llevará a bordo del bongo
-          hospital de la Armada de Colombia.</p>
+        <h6 class="title">REALIDAD AUMENTADA BONGO HOSPITAL</h6>
+        <p class="experienciasdescription">Sumérgete en una experiencia interactiva que te llevará a conocer más sobre el Bongo
+          Hospital de la Armada de Colombia.</p>
       </div>
     </div>
     <div class="card" data-apk="docu.apk" style="background-image: url('Assets/IMG/experiencias/documental.webp');">
@@ -427,8 +427,8 @@
       <div class="text-container">
         <h6 class="title">LIBRO</h6>
         <p class="experienciasdescription">Conoce este importante trabajo de investigación que evoca historias y
-          experiencias de las comunidades locales de la Amazonía, así cómo, el contexto de memoria e información
-          estratégica que se fundamenta en el rol fundamental que desempeña la Armada de Colombia en esta región del
+          experiencias de las comunidades locales de la Amazonía, así como el contexto de memoria e información
+          estratégica que se fundamenta en el rol que desempeña la Armada de Colombia en esta región del
           país.</p>
       </div>
     </div>
